--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,8 +40,9 @@ jobs:
 
       - name: "Terraform Plan"
         id: plan
-        run: terraform plan -no-color
-
-      - name: "Terraform Apply"
-        id: apply
-        run: terraform apply
+        run: terraform plan > plan_output.txt
+      - name: Upload Plan
+        uses: actions/upload-artifact@v2
+        with:
+          name: plan-output
+          path: plan_output.txt
