--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,6 +43,7 @@ jobs:
         run: terraform plan -no-color
 
       - name: "Terraform Apply"
+        if: github.ref == 'refs/heads/"main"'
         id: apply
         run: terraform apply -auto-approve
 
